Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjBooleanRetboolean.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        Boolean two
        two:SetValue(true)
        Yoda<Boolean, Boolean, boolean> yoda
        boolean ret = yoda:useForce(one, two)
        output "passed"
     end
end
