Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjBooleanRetbooleanFail.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
